# coronews

./: CHANGELOG.md  README.md  coronews.cabal
app/: Main.hs
src/: Coronews.hs  Covid.hs  Display.hs
