cabal-version:       2.4
name:                coronews
version:             0.0.0.0
synopsis:            CLI interface to COVID-19 stats API.
description:         CLI interface to COVID-19 stats API.
homepage:            https://github.com/patrickt/coronews
bug-reports:         https://github.com/patrickt/coronews/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2020 Patrick Thomson
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/patrickt/coronews.git


common haskell
  build-depends:       base ^>= 4.13.0.0
                     , prettyprinter-ansi-terminal ^>= 1.1.1

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              haskell
  hs-source-dirs:      src
  exposed-modules:     Covid
                     , Display


  build-depends:       base ^>= 4.13.0.0
                     , aeson
                     , generic-lens
                     , lens
                     , lens-aeson
                     , prettyprinter ^>= 1.6.1
                     , streaming
                     , streaming-utils
                     , streaming-bytestring
                     , text
                     , time ^>= 1.9.3
                     , transformers

executable coronews
  import:              haskell
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base ^>= 4.13.0.0
                     , coronews

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
